k8s/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sentiment-classifier-service
spec:
  selector:
    app: sentiment-classifier
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
